@@ -270,7 +270,6 @@ extern struct Battle_Config {
 	unsigned short party_share_type;
 	unsigned short party_hp_mode;
 	unsigned short party_show_share_picker;
-	unsigned short mob_ghostring_fix;
 	unsigned short attack_attr_none;
 	int item_rate_mvp, item_rate_common, item_rate_common_boss, item_rate_card, item_rate_card_boss,	// added support for MVP drops [Reddozen]
 		item_rate_equip, item_rate_equip_boss, item_rate_heal, item_rate_heal_boss, item_rate_use,
